--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.ParkingShare">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:exported="true"
+            android:name=".presentation.screens.login.LoginActivity"
+            android:theme="@style/Theme.ParkingShare" />
     </application>
 
 </manifest>
