--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
+    <uses-permission
+        android:name="com.google.android.gms.permission.AD_ID"
+        tools:node="remove" />
 
     <application
         android:name=".ParkingShareApplication"
@@ -30,9 +32,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:host="community-parking-share.web.app"/>
-                <data android:host="estaciona.web.app"/>
-                <data android:pathPrefix="/"/>
+                <data android:host="community-parking-share.web.app" />
+                <data android:host="estaciona.web.app" />
+                <data android:pathPrefix="/" />
                 <data android:scheme="https" />
             </intent-filter>
         </activity>
