--- a/app/config/detekt.yml
+++ b/app/config/detekt.yml
@@ -509,7 +509,7 @@ style:
   BracesOnIfStatements:
     active: false
     singleLine: 'optional'
-    multiLine: 'always'
+    multiLine: 'optional'
   BracesOnWhenStatements:
     active: false
     singleLine: 'necessary'
